fix service in yaml

--- a/mta.yaml
+++ b/mta.yaml
@@ -74,7 +74,7 @@ resources:
    properties:
      OSR-EDW-SOURCE-RMS-grantor-service: '${service-name}'
    parameters:
-     service-name: D043051-lufb2asszmec20vd-OSR_EDW_SOURCE_RMS-OSR_EDW_SOURCE_RMS-container
+     service-name: OSR_EDW_SOURCE_RMS-deploy
    type: org.cloudfoundry.existing-service
  - name: OSR_EDW_PLATFORM-dws
    properties:
