--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,13 +11,13 @@
 		"body-parser": "1.17.2",
 		"express": "4.15.3",
 		"passport": "0.3.2",
-		"@sap/xsenv": "1.2.6",
+		"@sap/xsenv": "^1.2.6",
 		"@sap/dwf-dws-client": "2.3.3"
 	},
 	"scripts": {
 		"start": "node app.js"
 	},
 	"engines": {
-		"node" : "6.x"
+		"node" : ">=6.0.0 <8.0.0"
 	}
 }
