--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,10 +11,13 @@
 		"body-parser": "1.17.2",
 		"express": "4.16.3",
 		"passport": "0.4.0",
-		"@sap/xsenv": "1.2.9",
-		"@sap/dwf-dws-client": "2.4.0"
+		"@sap/xsenv": "1.2.6",
+		"@sap/dwf-dws-client": "2.3.3"
 	},
 	"scripts": {
 		"start": "node app.js"
-	}
+	},
+	"engines": {
+		"node" : "6.x"
+	} 
 }
