--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,10 +9,10 @@
 	"main": "app.js",
 	"dependencies": {
 		"body-parser": "1.17.2",
-		"express": "4.16.3",
-		"passport": "0.4.0",
-		"@sap/xsenv": "1.2.9",
-		"@sap/dwf-dws-client": "2.4.0"
+		"express": "4.15.3",
+		"passport": "0.3.2",
+		"@sap/xsenv": "^1.2.6",
+		"@sap/dwf-dws-client": "~2.2.8"
 	},
 	"scripts": {
 		"start": "node app.js"
