--- a/DWF/package.json
+++ b/DWF/package.json
@@ -5,10 +5,10 @@
 	"repository": {},
 	"license": "",
 	"dependencies": {
-		"@sap/dwf-deploy": "~2.2.3"
+		"@sap/dwf-deploy": "~2.3.0"
 	},
 	"devDependencies": {
-		"@sap/dwf-generator": "~2.2.3"
+		"@sap/dwf-generator": "~2.3.0"
 	},
 	"dwfConfig": {
 		"hdb-module": {
@@ -17,9 +17,10 @@
 	},
 	"files": [],
 	"scripts": {
-		"start": "node node_modules/@sap/dwf-deploy/main.js"
+		"start": "node node_modules/@sap/dwf-deploy/main.js",
+		"generate": "node node_modules/@sap/dwf-generator/main.js ./"
 	},
 	"engines": {
-		"node": ">=6.9.1"
+		"node": "^6.9.1"
 	}
 }
