update .hdiconfig for database module

--- a/Database/src/.hdiconfig
+++ b/Database/src/.hdiconfig
@@ -55,7 +55,8 @@
             "plugin_version": "2.0.0.0"
         },
         "hdbcds" : {
-            "plugin_name" : "com.sap.hana.di.cds"
+            "plugin_name" : "com.sap.hana.di.cds",
+            "plugin_version": "2.0.0.0"            
         },
         "hdbfunction" : {
             "plugin_name" : "com.sap.hana.di.function"
