--- a/Database/cfg/.hdiconfig
+++ b/Database/cfg/.hdiconfig
@@ -55,8 +55,7 @@
             "plugin_version": "2.0.0.0"
         },
         "hdbcds" : {
-            "plugin_name" : "com.sap.hana.di.cds",
-            "plugin_version": "2.0.0.0"            
+            "plugin_name" : "com.sap.hana.di.cds"
         },
         "hdbfunction" : {
             "plugin_name" : "com.sap.hana.di.function"
