--- a/mta.yaml
+++ b/mta.yaml
@@ -51,6 +51,16 @@ modules:
       properties:
         key: logical-OSR-EDW-SOURCE-TMR-grantor
         service: '~{OSR-EDW-SOURCE-TMR-grantor-service}'
+    - name: OSR-EDW-SOURCE-ABR-grantor
+      group: SERVICE_REPLACEMENTS
+      properties:
+        key: logical-OSR-EDW-SOURCE-ABR-grantor
+        service: '~{OSR-EDW-SOURCE-ABR-grantor-service}'
+    - name: OSR-EDW-SOURCE-ASIC-grantor
+      group: SERVICE_REPLACEMENTS
+      properties:
+        key: logical-OSR-EDW-SOURCE-ASIC-grantor
+        service: '~{OSR-EDW-SOURCE-ASIC-grantor-service}'
     - name: OSR-EDW-SOURCE-CRM-grantor
       group: SERVICE_REPLACEMENTS
       properties:
@@ -97,6 +107,18 @@ resources:
      OSR-EDW-SOURCE-TMR-grantor-service: '${service-name}'
    parameters:
      service-name: OSR_EDW_SOURCE_TMR-deploy
+   type: org.cloudfoundry.existing-service
+ - name: OSR-EDW-SOURCE-ABR-grantor
+   properties:
+     OSR-EDW-SOURCE-ABR-grantor-service: '${service-name}'
+   parameters:
+     service-name: OSR_EDW_SOURCE_ABR-deploy
+   type: org.cloudfoundry.existing-service
+ - name: OSR-EDW-SOURCE-ASIC-grantor
+   properties:
+     OSR-EDW-SOURCE-ASIC-grantor-service: '${service-name}'
+   parameters:
+     service-name: OSR_EDW_SOURCE_ASIC-deploy
    type: org.cloudfoundry.existing-service
  - name: OSR-EDW-SOURCE-CRM-grantor
    properties:
