Restore project json setting for MTA project type

--- a/.che/project.json
+++ b/.che/project.json
@@ -1,12 +1,1 @@
-{
-	"type": "blank",
-	"builders": {
-		"configs": {}
-	},
-	"runners": {
-		"configs": {}
-	},
-	"attributes": {},
-	"description": "",
-	"mixinTypes": []
-}
+{"type":"mta","builders":{"default":"mtabuilder","configs":{}},"runners":{"configs":{}},"attributes":{"sap.watt.common.setting":["{\"hdbInactiveFiles\":{\"inactiveFileList\":[\"/OSR_EDW_PLATFORM/Database/src/04_Integration/Fra/PayrollTax/Detection/ABN/TF_ABN_FY.hdbfunction\"]}}"]},"mixinTypes":[]} 
