--- a/.che/project.json
+++ b/.che/project.json
@@ -1,1 +1,1 @@
-{"type":"mta","builders":{"default":"mtabuilder","configs":{}},"runners":{"configs":{}},"attributes":{"sap.watt.common.setting":["{\"hdbInactiveFiles\":{\"inactiveFileList\":[]}}"]},"mixinTypes":[]}
+{"type":"mta","builders":{"default":"mtabuilder","configs":{}},"runners":{"configs":{}},"attributes":{"sap.watt.common.setting":["{\"hdbInactiveFiles\":{\"inactiveFileList\":[\"/OSR_EDW_PLATFORM/Database/src/04_Integration/Fra/PayrollTax/Detection/ABN/UI/CV_BP_BUSINESS_ADDRESS.hdbcalculationview\"]}}"]},"mixinTypes":[]}
