Remove auto undeploy feature for a hot fix

--- a/Database/package.json
+++ b/Database/package.json
@@ -4,7 +4,7 @@
 		"@sap/hdi-deploy": "3.7.0"
 	},
 	"scripts": {
-		"start": "node node_modules/@sap/hdi-deploy/deploy.js --auto-undeploy"
+		"start": "node node_modules/@sap/hdi-deploy/deploy.js"
 	},
 	"engines":{
 		"node":"8.x"
