update yaml file with rta grantor info.

--- a/mta.yaml
+++ b/mta.yaml
@@ -79,6 +79,11 @@ modules:
         properties:
           key: logical-OSR-EDW-SOURCE-DESBT-grantor
           service: '~{OSR-EDW-SOURCE-DESBT-grantor-service}'
+      - name: OSR-EDW-SOURCE-RTA-grantor
+        group: SERVICE_REPLACEMENTS
+        properties:
+          key: logical-OSR-EDW-SOURCE-RTA-grantor
+          service: '~{OSR-EDW-SOURCE-RTA-grantor-service}'
       - name: acs-ext-access-grantor
       - name: edw-ext-access-grantor
       - name: OSR-EDW-SOURCE-DATA-INFO-grantor
@@ -146,6 +151,12 @@ resources:
       OSR-EDW-SOURCE-DESBT-grantor-service: '${service-name}'
     parameters:
       service-name: OSR_EDW_SOURCE_DESBT-deploy
+    type: org.cloudfoundry.existing-service
+  - name: OSR-EDW-SOURCE-RTA-grantor
+    properties:
+      OSR-EDW-SOURCE-RTA-grantor-service: '${service-name}'
+    parameters:
+      service-name: OSR_EDW_SOURCE_RTA-deploy
     type: org.cloudfoundry.existing-service
   - name: OSR_EDW_PLATFORM-dws
     properties:
