SYN: Added BDM needs hdbsynonym file

--- a/mta.yaml
+++ b/mta.yaml
@@ -84,6 +84,11 @@ modules:
         properties:
           key: logical-OSR-EDW-SOURCE-RTA-grantor
           service: '~{OSR-EDW-SOURCE-RTA-grantor-service}'
+      - name: OSR-EDW-SOURCE-BDM-grantor
+        group: SERVICE_REPLACEMENTS
+        properties:
+          key: logical-OSR-EDW-SOURCE-BDM-grantor
+          service: '~{OSR-EDW-SOURCE-BDM-grantor-service}'
       - name: acs-ext-access-grantor
       - name: edw-ext-access-grantor
       - name: OSR-EDW-SOURCE-DATA-INFO-grantor
@@ -157,6 +162,12 @@ resources:
       OSR-EDW-SOURCE-RTA-grantor-service: '${service-name}'
     parameters:
       service-name: OSR_EDW_SOURCE_RTA-deploy
+    type: org.cloudfoundry.existing-service  
+  - name: OSR-EDW-SOURCE-BDM-grantor
+    properties:
+      OSR-EDW-SOURCE-BDM-grantor-service: '${service-name}'
+    parameters:
+      service-name: OSR_EDW_SOURCE_BDM-deploy
     type: org.cloudfoundry.existing-service
   - name: OSR_EDW_PLATFORM-dws
     properties:
