--- a/mta.yaml
+++ b/mta.yaml
@@ -76,12 +76,18 @@ modules:
           key: logical-OSR-EDW-SOURCE-DNRME-grantor
           service: '~{OSR-EDW-SOURCE-DNRME-grantor-service}'
       - name: acs-ext-access-grantor
-      - name: edw-ext-access-grantor
+      - name: OSR-EDW-SOURCE-CRM-grantor
       - name: OSR-EDW-SOURCE-DATA-INFO-grantor
         group: SERVICE_REPLACEMENTS
         properties:
           key: logical-OSR-EDW-SOURCE-DATA-INFO-grantor
           service: '~{OSR-EDW-SOURCE-DATA-INFO-grantor-service}'
+      - name: OSR-EDW-SOURCE-ABS-grantor
+        group: SERVICE_REPLACEMENTS
+        properties:
+          key: logical-OSR-EDW-SOURCE-ABS-grantor
+          service: '~{OSR-EDW-SOURCE-ABS-grantor-service}'
+      - name: edw-ext-access-grantor
 resources:
   - name: OSR-EDW-SOURCE-RMS-grantor
     properties:
@@ -178,3 +184,9 @@ resources:
       service-name: OSR_EDW_SOURCE_DATA_INFO-deploy
     properties:
       OSR-EDW-SOURCE-DATA-INFO-grantor-service: '${service-name}'
+  - name: OSR-EDW-SOURCE-ABS-grantor
+    type: org.cloudfoundry.existing-service
+    parameters:
+      service-name: OSR_EDW_SOURCE_ABS-deploy
+    properties:
+      OSR-EDW-SOURCE-ABS-grantor-service: '${service-name}'
